[package]
name = "citey"
version = "0.1.0"
authors = ["CJ Burkey <cjburkey01@gmail.com>"]
edition = "2018"

[dependencies]
render_derive = { path = "render_derive" }

[build-dependencies]
gl_generator = "0.14.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[features]
debug = []
