[package]
name = "citey"
version = "0.1.0"
authors = ["CJ Burkey <cjburkey01@gmail.com>"]
edition = "2018"

[dependencies]
gl_bindings = { path = "gl_bindings" }
render = { path = "render" }
render_derive = { path = "render_derive" }

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[features]
gl_debug = ["gl_bindings/debug"]
